gitops/manifests/2fauth/install.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: twofauth
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: twofauth
  namespace: twofauth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: twofauth
  template:
    metadata:
      labels:
        app: twofauth
    spec:
      containers:
        - name: twofauth
          image: 2fauth/2fauth
          imagePullPolicy: Always
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: data
              mountPath: /twofauth
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: twofauth-data
---
apiVersion: v1
kind: Service
metadata:
  name: twofauth
  namespace: twofauth
spec:
  selector:
    app: twofauth
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: twofauth-internal
  namespace: twofauth
  annotations:
    kubernetes.io/ingress.class: traefik-external
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`2fa.local.timmybtech.com`)
      kind: Rule
      services:
        - name: twofauth
          port: 8000
  tls:
    secretName: local-timmybtech-com-tls
